--- a/html/participant.html
+++ b/html/participant.html
@@ -13,7 +13,7 @@
 <body>
 
 <div class="header row align-items-center">
-    <div class="col-4" style="font-size: 30px;">
+    <div class="col-4 my-header" style="font-size: 30px;">
         Welcome Irem
     </div>
 
