ticket.html finished

--- a/html/ticket.html
+++ b/html/ticket.html
@@ -32,5 +32,45 @@
         <button id="btn2" type="button" class="btn org"> Wallet</button>
     </div>
 </div>
+
+<div class="table-container">
+
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th scope="col">Ticket ID</th>
+            <th scope="col">Event Title</th>
+            <th scope="col">Event Date</th>
+            <th scope="col">Purchase Date</th>
+            <th scope="col">Price</th>
+            <th scope="col"> </th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <th scope="row">10001</th>
+            <td>Emre Aydın</td>
+            <td>17.11.2022</td>
+            <td>10.11.2022</td>
+            <td>400.00</td>
+            <td>
+                <button class="cancel">cancel</button>
+            </td>
+        </tr>
+        <tr>
+            <th scope="row">10002</th>
+            <td>Concert</td>
+            <td>17.11.2022</td>
+            <td>10.11.2022</td>
+            <td>700.00</td>
+            <td>
+                <button class="cancel">cancel</button>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+
+</div>
+
 </body>
 </html>
