--- a/html/participant.html
+++ b/html/participant.html
@@ -30,7 +30,7 @@
     </div>
 
     <div class="col-1 mt-3">
-            <img class="image-back" src="../icons/arrow-right-circle.svg" alt="back"/>
+            <img class="image-back" src="../icons/logout.png" alt="back"/>
 
     </div>
 </div>
