--- a/html/event-detail.html
+++ b/html/event-detail.html
@@ -5,7 +5,7 @@
     <title>Event Detail</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="participant.css">
+    <link rel="stylesheet" href="../style/participant.css">
 </head>
 <body>
 <div class="header row align-items-center">
