--- a/html/verifiedOrganizer.html
+++ b/html/verifiedOrganizer.html
@@ -5,7 +5,7 @@
     <title>Verified Organizer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="organizer-style.css">
+    <link rel="stylesheet" href="../style/organizer-style.css">
 </head>
 <body>
 <div class="header row align-items-center" style="background-color: deeppink">
