wallet.html finished

--- a/html/wallet.html
+++ b/html/wallet.html
@@ -91,7 +91,7 @@
 
 <div class="go-back">
     <img class="image-back" src="../icons/icons8-back-arrow-32.png" alt="back"/>
-    <span>Go back to the home</span>
+    <span>Go back to home</span>
 </div>
 </body>
 </html>
