--- a/html/new-card.html
+++ b/html/new-card.html
@@ -36,8 +36,35 @@
     </div>
 </div>
 
-<div class="card">
-    dfcf
+<div class="wallet-card">
+    <div class="row">
+        <div class="col-6">
+            <label for="name" class=" col-form-label">Card Holder's Name</label>
+            <input type="text" class="form-control" id="name" placeholder="Name">
+        </div>
+        <div class="col-6">
+            <label for="no" class=" col-form-label">Card No</label>
+            <input type="number" class="form-control" id="no" placeholder="Card No">
+        </div>
+
+    </div>
+
+    <div class="row">
+        <div class="col-6">
+            <label for="date" class=" col-form-label">Validation Date</label>
+            <input type="date" class="form-control" id="date" placeholder="Date">
+        </div>
+        <div class="col-6">
+            <label for="cvc" class=" col-form-label">CVC</label>
+            <input type="number" class="form-control" id="cvc" placeholder="CVC">
+        </div>
+
+    </div>
+
+</div>
+
+<div class="btn-wallet">
+    <button class="btn org">Add</button>
 </div>
 
 <div class="go-back">
