--- a/html/wallet.html
+++ b/html/wallet.html
@@ -8,7 +8,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../style/participant.css">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>    <link rel="stylesheet" href="../style/participant.css">
+
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/wallet-style.css">
 </head>
 <body>
@@ -78,7 +82,7 @@
             <div class="col-7 card-box">
                 <div class="box-in">
                     <div>Total Balance: 100$</div>
-                    <button class="btn btn-light">Increase Balance</button>
+                    <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#exampleModal">Increase Balance</button>
                 </div>
                 <div>Total Participation Points: 550</div>
             </div>
@@ -93,5 +97,41 @@
     <img class="image-back" src="../icons/icons8-back-arrow-32.png" alt="back"/>
     <span>Go back to home</span>
 </div>
+
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Saved Cards</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="card-container">
+                    <div class="card">
+                        <div class="card-item">123****</div>
+                        <div class="card-item">Valid by: 12.12.2022</div>
+                        <button class="btn btn-light">Select</button>
+                    </div>
+                    <div class="card">
+                        <div class="card-item">123****</div>
+                        <div class="card-item">Valid by: 12.12.2022</div>
+                        <button class="btn btn-light">Select</button>
+                    </div>
+                    <div style="display: flex; margin: 15px">
+                        <label for="amount" class="col-sm-4 col-form-label">Enter An Amount</label>
+                        <input  type="number" class="form-control" id="amount" placeholder="Amount">
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Add Balance</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 </body>
 </html>
