edit-event.html added

--- a/html/verified-add-event.html
+++ b/html/verified-add-event.html
@@ -15,20 +15,21 @@
     <div class="box-v">
         <div class="box-item">
             <label for="title" class="col-sm-4 col-form-label">Title</label>
-            <input  type="text" class="form-control" id="title" placeholder="Title">
+            <input type="text" class="form-control" id="title" placeholder="Title">
         </div>
         <div class="box-item">
             <label class="col-sm-4 col-form-label" for="floatingTextarea2">Details</label>
-            <textarea class="form-control" placeholder="Please explain details of the event..." id="floatingTextarea2" style="height: 100px"></textarea>
+            <textarea class="form-control" placeholder="Please explain details of the event..." id="floatingTextarea2"
+                      style="height: 100px"></textarea>
         </div>
         <div class="box-item">
             <label for="Location" class="col-sm-4 col-form-label">Location</label>
-            <input  type="text" class="form-control" id="Location" placeholder="Location">
+            <input type="text" class="form-control" id="Location" placeholder="Location">
         </div>
 
         <div class="box-item">
             <label for="Date" class="col-sm-4 col-form-label">Date</label>
-            <input  type="date" class="form-control" id="Date" placeholder="Date">
+            <input type="date" class="form-control" id="Date" placeholder="Date">
         </div>
 
         <div class="box-item">
@@ -46,7 +47,7 @@
 
         <div class="box-item">
             <label for="Quota" class="col-sm-4 col-form-label">Enter A Quota</label>
-            <input  type="number" class="form-control" id="Quota" placeholder="Quota">
+            <input type="number" class="form-control" id="Quota" placeholder="Quota">
         </div>
 
         <div class="box-item">
@@ -61,7 +62,7 @@
 
         <div class="box-item">
             <label class="col-sm-4 col-form-label" for="ticket">Ticket Prices</label>
-            <input  type="number" class="form-control" id="ticket" placeholder="Price">
+            <input type="number" class="form-control" id="ticket" placeholder="Price">
 
         </div>
 
@@ -70,7 +71,6 @@
 <div class="evt-btn-container">
     <button class="btn pink">Create!</button>
 </div>
-
 
 
 <div class="go-back">
