event-filter.html added

--- a/html/event-filter.html
+++ b/html/event-filter.html
@@ -96,6 +96,9 @@
   </ul>
 
 </div>
-
+<div class="go-back">
+  <img class="image-back" src="../icons/icons8-back-arrow-32.png" alt="back"/>
+  <span>Go back to home</span>
+</div>
 </body>
 </html>
