--- a/html/view-participants.html
+++ b/html/view-participants.html
@@ -42,7 +42,7 @@
 </table>
 <div class="go-back">
     <img class="image-back" src="../icons/icons8-back-arrow-32.png" alt="back"/>
-    <span>Go back to the list</span>
+    <span>Go back</span>
 </div>
 </body>
 </html>
