--- a/html/admin-review-events.html
+++ b/html/admin-review-events.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Review Users</title>
+    <title>Review Events</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
@@ -13,13 +13,14 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
-<h3>Review Users</h3>
+<h3>Review Events</h3>
 <div>
     <div class="review-container">
         <div>
             <div class="review-item">
                 <div class="item">Id: 1234</div>
-                <div class="item">Name: Irem</div>
+                <div class="item">Organizer: BSO</div>
+                <div class="item">Name: Concert</div>
                 <p>
                     <button class="btn org" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample"
                             aria-expanded="false" aria-controls="collapseExample">
@@ -29,18 +30,20 @@
 
                 <p>
                     <button class="btn" type="button" style="background-color: red">
-                        Ban User
+                        Cancel Event
                     </button>
                 </p>
 
             </div>
             <div class="collapse" id="collapseExample">
                 <div class="card card-body">
-                    <div>Phone: 055555555</div>
                     <div>Location: Ankara</div>
-                    <div>Birth Date: 01.01.2000</div>
-                    <div>Participation points: 33</div>
-                    <div>Balance: 133</div>
+                    <div>Event Date: 01.01.2000</div>
+                    <div>Quota: 33</div>
+                    <div>Age Restriction: None</div>
+                    <div>Is Verified: Yes</div>
+                    <div>Organizer Phone: 055555555</div>
+                    <div>Organizer ID: 1111</div>
 
                 </div>
             </div>
@@ -50,7 +53,8 @@
         <div>
             <div class="review-item">
                 <div class="item">Id: 1234</div>
-                <div class="item">Name: Irem</div>
+                <div class="item">Organizer: BSO</div>
+                <div class="item">Name: Concert</div>
                 <p>
                     <button class="btn org" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample2"
                             aria-expanded="false" aria-controls="collapseExample">
@@ -60,22 +64,23 @@
 
                 <p>
                     <button class="btn" type="button" style="background-color: red">
-                        Ban User
+                        Cancel Event
                     </button>
                 </p>
 
             </div>
             <div class="collapse" id="collapseExample2">
                 <div class="card card-body">
-                    <div>Phone: 055555555</div>
                     <div>Location: Ankara</div>
-                    <div>Birth Date: 01.01.2000</div>
-                    <div>Participation points: 33</div>
-                    <div>Balance: 133</div>
+                    <div>Event Date: 01.01.2000</div>
+                    <div>Quota: 33</div>
+                    <div>Age Restriction: None</div>
+                    <div>Is Verified: Yes</div>
+                    <div>Organizer Phone: 055555555</div>
+                    <div>Organizer ID: 1111</div>
                 </div>
             </div>
         </div>
-
     </div>
 </div>
 <div class="go-back">
