--- a/html/adminHome.html
+++ b/html/adminHome.html
@@ -29,6 +29,10 @@
         <div class="label">Create Report</div>
         <button id="org-btn3" type="button" class="btn org">Go</button>
     </div>
+    <div class="block">
+        <div class="label">Logout</div>
+        <img class="image-back" src="../icons/logout.png" alt="back"/>
+    </div>
 
     <div style="margin: auto">
         <button id="org-btn4" type="button" class="btn org">Your Profile</button>
