--- a/html/verifiedOrganizer.html
+++ b/html/verifiedOrganizer.html
@@ -5,19 +5,32 @@
     <title>Verified Organizer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+            crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="../style/organizer-style.css">
 </head>
 <body>
 <div class="header row align-items-center" style="background-color: deeppink">
-    <div class="col-8 my-header" style="font-size: 30px;" >
+    <div class="col-7 my-header" style="font-size: 30px;">
         Bilkent Symphony Orchestra
     </div>
 
     <div class="col-1 mt-3">
         Popularity
     </div>
-    <div class="col-2 mt-3">
+    <div class="col-1 mt-3">
         IBAN
+    </div>
+    <div class="col-2 mt-3">
+        <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#exampleModal">Add IBAN
+        </button>
     </div>
 
     <div class="col-1 mt-3">
@@ -37,7 +50,7 @@
             <th scope="col">Date</th>
             <th scope="col">Location</th>
             <th scope="col">Participants</th>
-            <th scope="col"> </th>
+            <th scope="col"></th>
         </tr>
         </thead>
         <tbody>
@@ -67,12 +80,35 @@
     </table>
 
 
-
 </div>
 
 
 <div class="organize-btn-container">
-    <button id="pink-btn" type="button" class="btn pink" >Organize A New Event!</button>
+    <button id="pink-btn" type="button" class="btn pink">Organize A New Event!</button>
+</div>
+
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="card-container">
+                    <div style="display: flex; margin: 15px">
+                        <label for="amount" class="col-sm-4 col-form-label">Enter Your IBAN</label>
+                        <input type="number" class="form-control" id="amount" placeholder="IBAN">
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Add IBAN</button>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
