verified-add-event.html

--- a/html/verified-add-event.html
+++ b/html/verified-add-event.html
@@ -61,10 +61,30 @@
         </div>
 
         <div class="box-item">
-            <label class="col-sm-4 col-form-label" for="ticket">Ticket Prices</label>
-            <input type="number" class="form-control" id="ticket" placeholder="Price">
-
+            <label class="col-sm-4 col-form-label">Add Ticket Category</label>
+            <button class="btn btn-light" style="margin-left: 10px;">Add Category</button>
+            <button class="btn cancel" style="margin-left: 10px;">Delete Last</button>
+            <button class="btn cancel" style="margin-left: 10px;">Delete All</button>
         </div>
+
+        <div class="box-v" >
+            Enter ticket prices for categories:
+            <div class="box-item">
+                <label class="col-sm-4 col-form-label" for="ticket1">Ticket Category 1</label>
+                <input type="number" class="form-control" id="ticket1" placeholder=" Enter Price">
+            </div>
+
+            <div class="box-item">
+                <label class="col-sm-4 col-form-label" for="ticket2">Ticket Category 2</label>
+                <input type="number" class="form-control" id="ticket2" placeholder=" Enter Price">
+            </div>
+
+            <div class="box-item">
+                <label class="col-sm-4 col-form-label" for="ticket3">Ticket Category 3</label>
+                <input type="number" class="form-control" id="ticket3" placeholder=" Enter Price">
+            </div>
+        </div>
+
 
     </div>
 </div>
