verified-add-event.html update

--- a/html/register.html
+++ b/html/register.html
@@ -9,8 +9,8 @@
             crossorigin="anonymous"></script>
     <title>Login Page</title>
 </head>
-<body>
-<div>
+<body style="background-size: cover;background-image: url('../icons/messi.jpg'); color: aliceblue">
+<div >
     <div class="mx-auto" style="width: 500px; color:red">
         <h1 class="my-4">Register To Eventium</h1>
     </div>
