--- a/html/verified-add-event.html
+++ b/html/verified-add-event.html
@@ -59,49 +59,81 @@
                 <option value="2">+18</option>
             </select>
         </div>
-<script>
+        <script>
 
-    let index = 0;
-function add() {
-index++;
+            let index = 0;
 
-    document.getElementById("all-ticket").innerHTML+= "            <div id='"+index+"' class=\"box-item\">\n" +
-        "                <label class=\"col-sm-4 col-form-label\" for=\"ticket1\">" + "Ticket Category " + index + "</label>\n" +
-        "                <input type=\"number\" class=\"form-control\" id=\"ticket1\" placeholder=\" Enter Price\">\n" +
-        "            </div>";
-}
-Element.prototype.remove = function() {
-    this.parentElement.removeChild(this);
-}
-NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
-    for(var i = 0; i < this.length; i--) {
-        if(this[i] && this[i].parentElement) {
-            this[i].parentElement.removeChild(this[i]);
-        }
-    }
-}
-function deleteLast() {
+            function add() {
+                index++;
 
-    document.getElementById(index).remove();
-    index--;
-}
+                document.getElementById("all-ticket").innerHTML += "            <div id='" + index + "' class=\"box-item\">\n" +
+                    "                <label class=\"col-sm-4 col-form-label\" for=\"ticket1\">" + "Ticket Category " + index + "</label>\n" +
+                    "                <input type=\"number\" class=\"form-control\" id=\"ticket1\" placeholder=\" Enter Price\">\n" +
+                    "            </div>";
+            }
 
-function deleteAll() {
-    document.getElementById("all-ticket").innerHTML = "<div>Enter ticket prices for categories:</div>\n";
-index = 0;
-}
+            Element.prototype.remove = function () {
+                this.parentElement.removeChild(this);
+            }
+            NodeList.prototype.remove = HTMLCollection.prototype.remove = function () {
+                for (var i = 0; i < this.length; i--) {
+                    if (this[i] && this[i].parentElement) {
+                        this[i].parentElement.removeChild(this[i]);
+                    }
+                }
+            }
 
-</script>
-        <div class="box-item">
-            <label class="col-sm-4 col-form-label">Add Ticket Category</label>
-            <button class="btn btn-light" onclick="add()" style="margin-left: 10px;">Add Category</button>
-            <button class="btn cancel" onclick="deleteLast()" style="margin-left: 10px;">Delete Last</button>
-            <button class="btn cancel" onclick="deleteAll()" style="margin-left: 10px;">Delete All</button>
+            function deleteLast() {
+
+                document.getElementById(index).remove();
+                index--;
+            }
+
+            function deleteAll() {
+                document.getElementById("all-ticket").innerHTML = "<div>Enter ticket prices for categories:</div>\n";
+                index = 0;
+            }
+
+        </script>
+
+        <script>
+
+            function h() {
+               if(document.getElementById("btnradio2").checked){
+                    document.getElementById("ticket-box").style.visibility = 'hidden';
+                    console.log("jhgjh");
+                }else
+
+                   document.getElementById("ticket-box").style.visibility = 'visible';
+
+            }
+
+        </script>
+        <div class="btn-group box-item" role="group" aria-label="Basic radio toggle button group">
+
+                <input  onclick="h()" type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+                <label style="margin: 20px;" class="btn btn-outline-light" for="btnradio1">Paid</label>
+
+                <input  onclick="h()" type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+                <label  style="margin: 20px;" class="btn btn-outline-light" for="btnradio2">Free</label>
+
+
+
         </div>
 
-        <div class="box-v" id="all-ticket">
-            <div>Enter ticket prices for categories:</div>
+
+        <div id="ticket-box">
+            <div class="box-item">
+                <label class="col-sm-4 col-form-label">Add Ticket Category</label>
+                <button class="btn btn-light" onclick="add()" style="margin-left: 10px;">Add Category</button>
+                <button class="btn cancel" onclick="deleteLast()" style="margin-left: 10px;">Delete Last</button>
+                <button class="btn cancel" onclick="deleteAll()" style="margin-left: 10px;">Delete All</button>
+            </div>
+            <div class="box-v" id="all-ticket">
+                <div>Enter ticket prices for categories:</div>
+            </div>
         </div>
+
 
 
     </div>
