--- a/html/verified-add-event.html
+++ b/html/verified-add-event.html
@@ -112,15 +112,12 @@
         <div class="btn-group box-item" role="group" aria-label="Basic radio toggle button group">
 
                 <input  onclick="h()" type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
-                <label style="margin: 20px;" class="btn btn-outline-light" for="btnradio1">Paid</label>
+                <label style="margin: 20px;" class="btn btn-outline-light" for="btnradio1">Paid Event</label>
 
                 <input  onclick="h()" type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
-                <label  style="margin: 20px;" class="btn btn-outline-light" for="btnradio2">Free</label>
-
-
+                <label  style="margin: 20px;" class="btn btn-outline-light" for="btnradio2">Free Event</label>
 
         </div>
-
 
         <div id="ticket-box">
             <div class="box-item">
