--- a/html/event-detail.html
+++ b/html/event-detail.html
@@ -6,6 +6,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/participant.css">
+    <link rel="stylesheet" href="../style/wallet-style.css">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="header row align-items-center">
@@ -46,13 +51,46 @@
 
 </div>
 <div class="btn-container">
-    <button type="button" class="btn btn-success" style="margin-left: 70px">Join!(+50 points)</button>
+    <button type="button" class="btn btn-success"  data-bs-toggle="modal" data-bs-target="#exampleModal" style="margin-left: 70px">Join!(+50 points)</button>
+
 </div>
 
 <div class="go-back">
     <img class="image-back" src="../icons/icons8-back-arrow-32.png" alt="back"/>
     <span>Go back to the list</span>
 </div>
-
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Ticket Categories</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="card-container">
+                    <div class="card">
+                        <div class="card-item">Category 1</div>
+                        <div class="card-item">Price 18$</div>
+                        <button class="btn btn-light">Select</button>
+                    </div>
+                    <div class="card">
+                        <div class="card-item">Category 2</div>
+                        <div class="card-item">Price 38$</div>
+                        <button class="btn btn-light">Select</button>
+                    </div>
+                    <div style="display: flex; margin: 15px">
+                        <label for="amount" class="col-sm-8 col-form-label">Enter Ticket Amount</label>
+                        <input  type="number" class="form-control" id="amount" placeholder="Amount">
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div style="margin-right: 140px;">Total amount: 120$</div>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Purchase</button>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
