--- a/html/report.html
+++ b/html/report.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Report</title>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>    <link rel="stylesheet" href="../style/participant.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+            crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../style/participant.css">
 
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/wallet-style.css">
     <link rel="stylesheet" href="../style/admin-style.css">
 
@@ -16,29 +20,55 @@
 <h3>Admin Create Reports</h3>
 <div class="box-report">
     <div class="block-report">
-        <div class="label">Popular Organizer</div>
-        <button id="org-btn" data-bs-toggle="modal" data-bs-target="#exampleModal" type="button" class="btn org">Report Create</button>
-        <div class="label">Popular Organizer</div>
-        <button id="org-btn4" type="button" class="btn org">Report Create</button>
+        <div class="in-block">
+            <div class="label">Popular Organizer</div>
+            <button id="org-btn" data-bs-toggle="modal" data-bs-target="#exampleModal" type="button" class="btn org">
+                Report Create
+            </button>
+        </div>
+        <div class="in-block">
+            <div class="label">Maximum Participants</div>
+            <button id="org-btn4" data-bs-toggle="modal" data-bs-target="#exampleModal2" type="button" class="btn org">
+                Report Create
+            </button>
+        </div>
+
 
     </div>
     <div class="block-report">
-        <div class="label">Popular Organizer</div>
-        <button id="org-btn2" data-bs-toggle="modal" data-bs-target="#exampleModal" type="button" class="btn org">Report Create</button>
-        <div class="label">Popular Organizer</div>
-        <button id="org-btn3" type="button" class="btn org">Report Create</button>
+        <div class="in-block">
+            <div class="label">Participants of a Category</div>
+            <button id="org-btn2" data-bs-toggle="modal" data-bs-target="#exampleModal3" type="button" class="btn org">
+                Report Create
+            </button>
+        </div>
+
+        <div class="in-block">
+            <div class="label">Events in Next Month</div>
+            <button id="org-btn3" data-bs-toggle="modal" data-bs-target="#exampleModal4" type="button" class="btn org">
+                Report Create
+            </button>
+        </div>
+
 
     </div>
     <div class="block-report">
-        <div class="label">Popular Organizer</div>
-        <button id="org-btn5" data-bs-toggle="modal" data-bs-target="#exampleModal" type="button" class="btn org">Report Create</button>
-        <div class="label">Popular Organizer</div>
-        <button id="org-btn6" type="button" class="btn org">Report Create</button>
+        <div class="in-block">
+            <div class="label">Average Number</div>
+            <button id="org-btn5" type="button" class="btn org">Report Create</button>
+        </div>
+        <div class="in-block">
+            <div class="label">bosss</div>
+            <button id="org-btn6" type="button" class="btn org" data-bs-toggle="modal" data-bs-target="#exampleModal5">
+                Report Create
+            </button>
+        </div>
+
 
     </div>
 
 </div>
-
+<!-- modal 1-->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -68,12 +98,132 @@
 </div>
 
 
+<!-- modal 2-->
+<div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel2">Maximum Participants</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div>Retrieve the free event which has the maximum number of participants for each category located in
+                    selected location
+                </div>
+                <div class="card-container">
+                    <div class="card">
+                        <label for="location" class="col-sm-4 col-form-label">Location</label>
+                        <input type="text" class="form-control" id="location" placeholder="Location">
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Create Report</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 
+<!-- modal 3-->
+<div class="modal fade" id="exampleModal3" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel3">Participants of A Category</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div>Retrieve the participants who attended the selected category events last year</div>
+                <div class="card-container">
+                    <div class="card">
+                        <div>
+                            <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
+                                <option selected>Choose a Category</option>
+                                <option value="0">Music</option>
+                                <option value="1">Gathering</option>
+                                <option value="2">Sports</option>
+                                <option value="3">Business</option>
+                                <option value="4">Food&Drink</option>
+                                <option value="4">Visual Arts</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Create Report</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 
+<!-- modal 4-->
+<div class="modal fade" id="exampleModal4" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel4">Events in Next Month</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div>List all the events in the selected category which will take place in the next month in the
+                    selected location
+                </div>
+                <div class="card-container">
+                    <div class="card">
+                        <div style="display: flex; justify-content: space-around;">
+                            <label style="margin-right: 30px;">Category</label>
+                            <select class="form-select" id="floatingSelect2" aria-label="Floating label select example">
+                                <option selected>Choose a Category</option>
+                                <option value="0">Music</option>
+                                <option value="1">Gathering</option>
+                                <option value="2">Sports</option>
+                                <option value="3">Business</option>
+                                <option value="4">Food&Drink</option>
+                                <option value="4">Visual Arts</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <label for="loc2" class="col-sm-4 col-form-label">Location</label>
+                        <input type="text" class="form-control" id="loc2" placeholder="Location">
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Create Report</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 
+<!--modal 5   for the last buttonnnn-->
+<div class="modal fade" id="exampleModal5" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel5">Average Participants</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div>Find the average number of participants of events for each category</div>
+                <div class="card-container">
+
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Create Report</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 </body>
