--- a/html/report.html
+++ b/html/report.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="../style/wallet-style.css">
     <link rel="stylesheet" href="../style/admin-style.css">
 
+
+
 </head>
 <body>
 <div class="buffer"></div>
@@ -55,7 +57,7 @@
     <div class="block-report">
         <div class="in-block">
             <div class="label">Average Number</div>
-            <button id="org-btn5" type="button" class="btn org">Report Create</button>
+            <button id="org-btn5" type="button" class="btn org" data-bs-toggle="tooltip" data-bs-placement="top"  data-bs-html="true" title="Find the average number of participants of events for each category" >Report Create</button>
         </div>
         <div class="in-block">
             <div class="label">bosss</div>
