all reports added

--- a/html/report-avrg-num.html
+++ b/html/report-avrg-num.html
@@ -44,40 +44,33 @@
 
 
 <div class="report" id="invoice">
-    <div class="header">Report Results for Ankara</div>
-    <div class="explain">List of free events which have the maximum number of participants for each category in Ankara</div>
+    <div class="header">Report Results</div>
+    <div class="explain">Average number of participants of events for each category</div>
     <div class="box-report">
         <div class="block-report">
-            <div>Event Name: Muse Concert</div>
             <div>Category: Music</div>
-            <div>Participants: 400</div>
+            <div>Average Number of Participants: 400</div>
         </div>
         <div class="block-report">
-            <div>Event Name: Muse Concert</div>
             <div>Category: Gathering</div>
-            <div>Participants: 200</div>
+            <div>Average Number of Participants: 400</div>
         </div>
         <div class="block-report">
-            <div>Event Name: Muse Concert</div>
             <div>Category: Sports</div>
-            <div>Participants: 300</div>
+            <div>Average Number of Participants: 400</div>
         </div>
         <div class="block-report">
-            <div>Event Name: Muse Concert</div>
             <div>Category: Business</div>
-            <div>Participants: 460</div>
+            <div>Average Number of Participants: 400</div>
         </div>
 
         <div class="block-report">
-            <div>Event Name: Muse Concert</div>
             <div>Category: Food&Drink</div>
-            <div>Participants: 432</div>
+            <div>Average Number of Participants: 400</div>
         </div>
         <div class="block-report">
-            <div>Event Name: Muse Concert</div>
             <div>Category: Visual Arts</div>
-            <div>Participants: 400</div>
-        </div>
+            <div>Average Number of Participants: 400</div>        </div>
     </div>
 </div>
 
