--- a/html/report-events-in-next-month.html
+++ b/html/report-events-in-next-month.html
@@ -44,39 +44,18 @@
 
 
 <div class="report" id="invoice">
-    <div class="header">Report Results for Ankara</div>
-    <div class="explain">List of free events which have the maximum number of participants for each category in Ankara</div>
+    <div class="header">Report Results for Music in Ankara</div>
+        <div class="explain">
+            List all the events in the music category which will take place in the next month in Ankara
+        </div>
     <div class="box-report">
         <div class="block-report">
-            <div>Event Name: Muse Concert</div>
-            <div>Category: Music</div>
-            <div>Participants: 400</div>
+            <div>Event Name : Muse Concert</div>
+            <div>Event Date : 12-11-2022</div>
         </div>
         <div class="block-report">
-            <div>Event Name: Muse Concert</div>
-            <div>Category: Gathering</div>
-            <div>Participants: 200</div>
-        </div>
-        <div class="block-report">
-            <div>Event Name: Muse Concert</div>
-            <div>Category: Sports</div>
-            <div>Participants: 300</div>
-        </div>
-        <div class="block-report">
-            <div>Event Name: Muse Concert</div>
-            <div>Category: Business</div>
-            <div>Participants: 460</div>
-        </div>
-
-        <div class="block-report">
-            <div>Event Name: Muse Concert</div>
-            <div>Category: Food&Drink</div>
-            <div>Participants: 432</div>
-        </div>
-        <div class="block-report">
-            <div>Event Name: Muse Concert</div>
-            <div>Category: Visual Arts</div>
-            <div>Participants: 400</div>
+            <div>Event Name : Muse Concert</div>
+            <div>Event Date : 12-11-2022</div>
         </div>
     </div>
 </div>
