--- a/html/report-participants-of-category.html
+++ b/html/report-participants-of-category.html
@@ -44,39 +44,16 @@
 
 
 <div class="report" id="invoice">
-    <div class="header">Report Results for Ankara</div>
-    <div class="explain">List of free events which have the maximum number of participants for each category in Ankara</div>
+    <div class="header">Report Results for Music</div>
+        <div class="explain">List of the participants who attended the music category events last year</div>
     <div class="box-report">
         <div class="block-report">
-            <div>Event Name: Muse Concert</div>
-            <div>Category: Music</div>
-            <div>Participants: 400</div>
+            <div>Participant ID : 1001</div>
+            <div>Participant Name : Ece Kahraman</div>
         </div>
         <div class="block-report">
-            <div>Event Name: Muse Concert</div>
-            <div>Category: Gathering</div>
-            <div>Participants: 200</div>
-        </div>
-        <div class="block-report">
-            <div>Event Name: Muse Concert</div>
-            <div>Category: Sports</div>
-            <div>Participants: 300</div>
-        </div>
-        <div class="block-report">
-            <div>Event Name: Muse Concert</div>
-            <div>Category: Business</div>
-            <div>Participants: 460</div>
-        </div>
-
-        <div class="block-report">
-            <div>Event Name: Muse Concert</div>
-            <div>Category: Food&Drink</div>
-            <div>Participants: 432</div>
-        </div>
-        <div class="block-report">
-            <div>Event Name: Muse Concert</div>
-            <div>Category: Visual Arts</div>
-            <div>Participants: 400</div>
+            <div>Participant ID : 1002</div>
+            <div>Participant Name : Ece Kahraman</div>
         </div>
     </div>
 </div>
