--- a/html/report-avrg-num.html
+++ b/html/report-avrg-num.html
@@ -7,12 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 
 
-
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/admin-style.css">
-
 
 
     <!-- html2pdf CDN link -->
@@ -39,8 +36,6 @@
 
 
 </script>
-
-
 
 
 <div class="report" id="invoice">
@@ -70,7 +65,8 @@
         </div>
         <div class="block-report">
             <div>Category: Visual Arts</div>
-            <div>Average Number of Participants: 400</div>        </div>
+            <div>Average Number of Participants: 400</div>
+        </div>
     </div>
 </div>
 
