report-popular-unp-organizer.html

--- a/html/report-popular-unp-organizer.html
+++ b/html/report-popular-unp-organizer.html
@@ -44,39 +44,21 @@
 
 
 <div class="report" id="invoice">
-    <div class="header">Report Results for Ankara</div>
-    <div class="explain">List of free events which have the maximum number of participants for each category in Ankara</div>
+    <div class="header">Report Results</div>
+        <div class="explain">
+            The most popular and unpopular organizers which created at least 5 events in at least two different cities for all cities
+        </div>
     <div class="box-report" style="font-size: 15px;">
-        <table class="p-container table table-striped">
-            <thead>
-            <tr>
-                <th scope="col">City</th>
-                <th scope="col">The Most Popular Organizer (Popularity)</th>
-                <th scope="col">The Least Popular Organizer (Popularity)</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <th scope="row">Ankara</th>
-                <td>Bora Bora (444)</td>
-                <td>Bora Bora (4)</td>
-
-            </tr>
-            <tr>
-                <th scope="row">Istanbul</th>
-                <td>Bora Bora (444)</td>
-                <td>Bora Bora (4)</td>
-
-            </tr>
-            <tr>
-                <th scope="row">Kutahya</th>
-                <td>Bora Bora (444)</td>
-                <td>Bora Bora (4)</td>
-
-            </tr>
-
-            </tbody>
-        </table>
+        <div class="block-report">
+            <div>City : Ankara</div>
+            <div>The Most Popular Organizer : Bora Bora Popularity : 400 </div>
+            <div>The Least Popular Organizer : Bora Bora Popularity : 5 </div>
+        </div>
+        <div class="block-report">
+            <div>City : Istanbul</div>
+            <div>The Most Popular Organizer : Bora Bora Popularity : 400 </div>
+            <div>The Least Popular Organizer : Bora Bora Popularity : 5 </div>
+        </div>
     </div>
 </div>
 
