--- a/html/report.html
+++ b/html/report.html
@@ -60,8 +60,8 @@
             <button id="org-btn5" type="button" class="btn org" data-bs-toggle="tooltip" data-bs-placement="top"  data-bs-html="true" title="Find the average number of participants of events for each category" >Report Create</button>
         </div>
         <div class="in-block">
-            <div class="label">bosss</div>
-            <button id="org-btn6" type="button" class="btn org" data-bs-toggle="modal" data-bs-target="#exampleModal5">
+            <div class="label" style="font-size: 17px">Popular and Unpopular Organizer</div>
+            <button id="org-btn6" type="button" class="btn org" data-bs-toggle="tooltip" data-bs-placement="top"  data-bs-html="true" title="The most popular and unpopular organizers which created at least 5 events in at least two different cities for all cities">
                 Report Create
             </button>
         </div>
@@ -205,27 +205,6 @@
 </div>
 
 
-<!--modal 5   for the last buttonnnn-->
-<div class="modal fade" id="exampleModal5" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel5">Average Participants</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <div>Find the average number of participants of events for each category</div>
-                <div class="card-container">
-
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Create Report</button>
-            </div>
-        </div>
-    </div>
-</div>
 
 
 </body>
