--- a/html/report-max-participant.html
+++ b/html/report-max-participant.html
@@ -41,42 +41,41 @@
 </script>
 
 
-
-
 <div class="report" id="invoice">
     <div class="header">Report Results for Ankara</div>
     <div class="explain">List of free events which have the maximum number of participants for each category in Ankara</div>
-    <div class="box-report" style="font-size: 15px;">
-        <table class="p-container table table-striped">
-            <thead>
-            <tr>
-                <th scope="col">City</th>
-                <th scope="col">The Most Popular Organizer (Popularity)</th>
-                <th scope="col">The Least Popular Organizer (Popularity)</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <th scope="row">Ankara</th>
-                <td>Bora Bora (444)</td>
-                <td>Bora Bora (4)</td>
+    <div class="box-report">
+        <div class="block-report">
+            <div>Event Name: Muse Concert</div>
+            <div>Category: Music</div>
+            <div>Participants: 400</div>
+        </div>
+        <div class="block-report">
+            <div>Event Name: Muse Concert</div>
+            <div>Category: Gathering</div>
+            <div>Participants: 200</div>
+        </div>
+        <div class="block-report">
+            <div>Event Name: Muse Concert</div>
+            <div>Category: Sports</div>
+            <div>Participants: 300</div>
+        </div>
+        <div class="block-report">
+            <div>Event Name: Muse Concert</div>
+            <div>Category: Business</div>
+            <div>Participants: 460</div>
+        </div>
 
-            </tr>
-            <tr>
-                <th scope="row">Istanbul</th>
-                <td>Bora Bora (444)</td>
-                <td>Bora Bora (4)</td>
-
-            </tr>
-            <tr>
-                <th scope="row">Kutahya</th>
-                <td>Bora Bora (444)</td>
-                <td>Bora Bora (4)</td>
-
-            </tr>
-
-            </tbody>
-        </table>
+        <div class="block-report">
+            <div>Event Name: Muse Concert</div>
+            <div>Category: Food&Drink</div>
+            <div>Participants: 432</div>
+        </div>
+        <div class="block-report">
+            <div>Event Name: Muse Concert</div>
+            <div>Category: Visual Arts</div>
+            <div>Participants: 400</div>
+        </div>
     </div>
 </div>
 
