participant_home.php update

--- a/html/participant.html
+++ b/html/participant.html
@@ -57,10 +57,13 @@
 
    <ul>
        <li>
-       <div class="date">13 June 2022</div>
-       <div class="name">Vivaldi recital</div>
-       <div class="details"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem consequuntur</div>
-       <button class="cancel">cancel</button>
+           <div class="row">
+               <div class="col-2 date">13 June 2022</div>
+               <div class="col-2 name">Vivaldi recital</div>
+               <div class="col-6 details"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem consequuntur</div>
+               <button class="col-2 cancel">cancel</button>
+           </div>
+
        </li>
 
    </ul>
