--- a/html/event-filter.html
+++ b/html/event-filter.html
@@ -77,7 +77,7 @@
 <div class="filter-display">
 
   <ul>
-    <li>
+    <li class="li-filter">
       <div class="date">13 June 2022</div>
       <div class="name">Vivaldi recital</div>
       <div class="name">BSO</div>
@@ -85,7 +85,7 @@
 
     </li>
 
-    <li>
+    <li class="li-filter">
       <div class="date">13 June 2022</div>
       <div class="name">Vivaldi recital</div>
       <div class="name">BSO</div>
