--- a/html/participant.html
+++ b/html/participant.html
@@ -60,7 +60,25 @@
            <div class="row">
                <div class="col-2 date">13 June 2022</div>
                <div class="col-2 name">Vivaldi recital</div>
-               <div class="col-6 details"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem consequuntur</div>
+               <div class="col-7 details"> Lorem adipisicing elit. Autem consequuntur</div>
+               <button class="col-1 cancel">cancel</button>
+           </div>
+
+       </li>
+       <li>
+           <div class="row">
+               <div class="col-2 date">13 June 2022</div>
+               <div class="col-2 name">Vivaldi recital</div>
+               <div class="col-6 details"> Lorem. Autem consequuntur</div>
+               <button class="col-1 cancel">cancel</button>
+           </div>
+
+       </li>
+       <li>
+           <div class="row">
+               <div class="col-2 date">13 June 2022</div>
+               <div class="col-2 name">Vivaldi recital</div>
+               <div class="col-6 details"> Lorem ips. Autem consequuntur</div>
                <button class="col-2 cancel">cancel</button>
            </div>
 
